--- a/Parallax/index.html
+++ b/Parallax/index.html
@@ -12,13 +12,14 @@
       <div class="midground"></div>
       <div class="forground"></div>
       <div class="text">
-        <h1>Bursting the</h1>
-        <h1>Bubble</h1>
-        <h1>of Tech</h1>
-        <h2>
+        <h1>Bursting the bubble of tech</h1>
       </div>
+
     </header>
   </div>
+  <div id="forground2"></div>
+  <div id="forground3"></div>
+  <div id="forground4"></div>
 
   <div class="arrow bounce">
   </div>
