--- a/Parallax/index.html
+++ b/Parallax/index.html
@@ -1,5 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+
+  <!-- Basic Page Needs
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta charset="utf-8">
+  <title>The Margins-Article</title>
+  <meta name="description" content="">
+  <meta name="author" content="">
+
+  <!-- Mobile Specific Metas
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+
+  <!-- CSS
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+ <link rel="stylesheet" href="css/TheMargins_styles.css">
+
+
+  <!-- Favicon
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
+
+</head>
+<body>
+
+<!-- Hamburger menu
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<nav role="navigation" class="TheMargins_nav" >
+  <div id="menuToggle">
+    <!--
+    A fake / hidden checkbox is used as click reciever,
+    so you can use the :checked selector on it.
+    -->
+    <input type="checkbox" />
+
+    <!--
+    Some spans to act as a hamburger.
+    -->
+    <span></span>
+    <span></span>
+    <span></span>
+
+    <ul id="menu">
+        <a href="#"><li>Article 1</li></a>
+        <a href="#"><li>Article 2</li></a>
+        <a href="#"><li>Article 3</li></a>
+        <a href="#"><li>Article 4</li></a>
+        <a href="#"><li>Article 5</li></a>
+        <a href="#"><li>Article 6</li></a>
+        <a href="http://www.northeastern.edu/rugglesmedia/"><li>More on Ruggles Media</li></a>
+
+    </ul>
+  </div>
+</nav>
+
+  <!-- Primary Page Layout
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="container">
+    <div class="row">
+      <div class="column TheMargins">S
+      </div>
+  </div>
+</div>
+<!-- End Document
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+</body>
 <head>
     <title> Bursting the bubble of tech </title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
@@ -38,7 +110,7 @@
 </p>
 <p>He seeks to create a work environment built on inherent trust and communication rather than demanding employees constantly prove their worth, an attitude he sees not only as problematic in the tech industry, but also cuts down on productivity. With a business that he has grown from 200 employees when he assumed the CEO position in 2012, to the 1000 it has today, Thomas has established himself as a leader in Boston and the world. Rapid7 now has 15 branches around the world, and Thomas was recently named one of the 20 most important African Americans in the industry by Business Insider.</p>
       <p>According to the Equal Employment Opportunity Commission, African-Americans make up less than five percent of the technology industry's workforce in Silicon Valley, and the percentage of African-Americans that occupy executive positions in the industry may be as low as one percent, according to the commission. And independent entrepreneurs have it just as bad as those already established in the sector.</p>
-       <img src="rapid.jpg"/>
+       <img src="rapid.JPG"/>
 
       <div class="footer"></div>
 <div class="chart_1"></div>
@@ -106,6 +178,8 @@
               <p> Thomas said that entrepreneurs aren’t the only who benefit with more inclusive visions of lending and hiring. In fact, he said, it’s the lack of diversification that leads to companies collapsing. After all, if decision-makers don’t leave their "bubbles" filled with people who look, think, and are educated the same, they have no idea what’s truly happening with trends in their industries and society as a whole. </p>
               <p> "Bubbles," Thomas said, "are the chief cause of why companies become irrelevant." </p>
               <div class="footer"></div>
+
+              <h6 class="TheMargins_footer"><span class="TheMargins_footer">| The Margins | </span>is a project of the Media Innovation program at the Northeastern University School of Journalism. © 2017</h6>
 
 
 
