--- a/Parallax/index.html
+++ b/Parallax/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>The Margins-Article</title>
+  <title>Bursting the bubble of tech</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -65,7 +65,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
     <div class="row">
-      <div class="column TheMargins">S
+      <div class="column TheMargins">
       </div>
   </div>
 </div>
@@ -97,7 +97,9 @@
   </div>
   <div class="flex-container">
     <div class="content">
+    </div>
 
+<div id="colorstrip"/>
       <h3>By <span class="bylines"><a class="link_header" href="http://www.twitter.com/brookstake" target="_blank">Brooks Sutherland</a>, <a class="link_header" href="xxxxxxx" target="_blank">Shen Chen</a>, <a class="link_header" href="xxxxxxx" target="_blank">Patrick Johnston</a></span>, <a class="link_header" href="xxxxxxx" target="_blank">Megan McKee</a></span></h3>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <a href="https://www.facebook.com/" class="fa fa-facebook"></a>
@@ -113,7 +115,6 @@
        <img src="rapid.JPG"/>
 
       <div class="footer"></div>
-<div class="chart_1"></div>
 
   <!-- SECOND PARALLAX -->
 
